--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -8,7 +8,10 @@ body{
     margin: 0px;
     padding: 0px;
 }
-
+/* .intro{
+    border-bottom: 1px solid black;
+    
+} */
 h1{
     font-size: 3em;
     font-weight: 400;
@@ -29,7 +32,7 @@ h2 {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
 .general-recipe{
     margin:50px;
