--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700|Roboto:100,300,700');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400');
 
 /* "*" asterisco es un selector global */
 
 body{
-    font-family: Roboto;
+    font-family: Open Sans;
     font-size: 18px;
     margin: 0px;
     padding: 0px;
 }
 /* .intro{
     border-bottom: 1px solid black;
-    
 } */
+
 h1{
     font-size: 3em;
     font-weight: 400;
@@ -42,6 +42,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .intro img, .ingredients img{
@@ -52,22 +53,34 @@ h2 {
     margin-left: 80px;
     margin-right: 80px; 
     margin-top: 40px;  
+    margin-bottom: 40px;
 }
 
 .ingredients{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-bottom: 40px,
 }
 /* alinear hijo con self a diferencia de items que sirve desde el padre para sus hijos */
 .ingredients img{
     align-self: center;
 }
 
-ul li{
-    list-style-type: '-';
+.directions{
+    margin-top: 40px;
 }
 
+ul{
+    margin-bottom: 40px;
+}
+
+ul li{
+    list-style-type: '- ';
+    margin-bottom: 10px;
+}
+
+/* to right implica que va de izquierda a derecha aportando los colores al gradient, en este caso mismo color y jugando con opacidad en extremos */
 hr{
     border: 0;
     height: 1.2px;
